fix: force favicon refresh

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Punto escort - O maior site de acompanhantes </title>
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/favicon.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png?v=20260210" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon.png?v=20260210" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png?v=20260210" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png?v=20260210" />
+    <link rel="shortcut icon" href="/favicon.png?v=20260210" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/index.css">
 </head>
